Tue, 08 Jul 2008 21:10:48 -0400 <me@nikosapi.org>
Small bugfixes

	* src/gpodder/gui.py: for bluetooth file transfer make sure
	episode.sync_filename()	doesn't contain any troublesome characters
	eg. some episodes include / in the title
	* src/gpodder/libpodcasts.py: comment out mimetype logging, it gets
	annoying after a while...
	* src/gpodder/util.py: remove "path = os.path.dirname(path)" from
	get_free_disk_space(path), this prevented the real free disk space
	from being reported

Sun, 06 Jul 2008 23:11:33 +0200 <thp@perli.net>
Update book donators list

	* src/gpodder/gui.py: Add PhilF to list of book donators

Sat, 05 Jul 2008 15:23:55 -0400 <me@nikosapi.org>
Support episodes without a guid during migration (patch from Justin Forest)

	* src/gpodder/dbsqlite.py: Don't raise an exception if an episode is
	missing a guid
	* src/gpodder/libpodcasts.py: Make sure that episodes from LocalDBReader
	always contain some kind of guid

Fri, 04 Jul 2008 13:25:12 -0400 <me@nikosapi.org>
	* src/gpodder/gui.py: fix traceback when deleting episodes from device

Fri, 04 Jul 2008 18:47:19 +0200 <thp@perli.net>
New look for the "pill" pixbuf

	* src/gpodder/draw.py: Refresh the look of the "pill" pixbuf code, so
	we have a more visually pleasing status display in the podcast list

Thu, 03 Jul 2008 20:09:18 -0400 <me@nikosapi.org>
Display message if user tries to sync to iPod without gpod installed

	* src/gpodder/gui.py: Add an informative self.notification() if the user
	attempts to sync an iPod without the libgpod python bindings installed
	* src/gpodder/sync.py: Add sync.gpod_available, Add Device.errors to
	prevent a crash in the event of an error

Thu, 03 Jul 2008 20:26:50 +0200 <thp@perli.net>
Update list of book donators

	* src/gpodder/gui.py: Add Franz Seidl to list of book donators

Tue, 01 Jul 2008 22:46:52 -0400 <me@nikosapi.org>
Better file extension detection using feed items' mimetypes

	* src/gpodder/gui.py: Use episode.file_type() instead of 